<resources>
    <string name="app_name">QuAcc</string>
    <string name="action_confirm">Fertig</string>
    <string name="action_categories">Kategorien</string>
    <string name="action_filter">Filter</string>
    <string name="date_selector_toggle">Toggle Datum Auswahl</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_template">Templates</string>
    <string name="action_template_speech">Sprach Templates</string>
    <string name="title_activity_accounting_list">Übersicht</string>
    <string name="title_activity_add_accounting">Neue Buchung</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accounts">Account Editor</string>
    <string name="title_activity_template">Templates</string>
    <string name="title_activity_template_create">Templates Erstellen</string>
    <string name="title_activity_template_speech">Sprach Templates</string>
    <string name="save">Speichern</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Girkonto</string>
    <string name="title_section2">Bar</string>
    <string name="title_section3">Tagesgeldkonto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_navigation_drawer_check">NavigationDrawerCheck</string>
    <string name="title_activity_navi_check">NaviCheck</string>
</resources>
