<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.nenick.quacc.category.CategoriesActivity">
    <item
        android:id="@+id/filterToggle"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_filter"
        android:orderInCategory="50"
        app:showAsAction="always" />
    <item
        android:id="@+id/category"
        android:title="@string/action_categories"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/account"
        android:title="@string/action_accounts"
        android:orderInCategory="150"
        app:showAsAction="never" />
    <item
        android:id="@+id/template"
        android:title="@string/action_template"
        android:orderInCategory="150"
        app:showAsAction="never" />
    <item
        android:id="@+id/template_speech"
        android:title="@string/action_template_speech"
        android:orderInCategory="150"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_data"
        android:title="export"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/import_data"
        android:title="import"
        android:orderInCategory="2001"
        app:showAsAction="never" />
</menu>
